mule-agent/v/1.1.1/index.adoc
= The Mule Agent
:keywords: agent, mule, esb, servers, monitor, notifications, external systems, third party, get status, metrics

*_Enterprise Edition_*, *_Mule 3.7.0_*

The Mule agent is a plugin extension for Mule which exposes the Mule API. Using the Mule agent, you can monitor and control your Mule Runtime servers by calling APIs from external systems, and/or have Mule publish its own data to external systems. The agent has many features, including:

* Controlling applications, domains and services:
** List, deploy, undeploy or redeploy domains
** List, deploy, undeploy, get status of, start or stop applications
* Publishing Mule metrics to external monitoring systems

The agent supports two communication protocols: REST and WebSockets. 

The agent is installed into your `$MULE_HOME/plugins` directory; it is configured via a single configuration file. For installation instructions and download links, see link:/mule-agent/v/1.1.1/installing-mule-agent[Installing the Agent].

Additionally, MuleSoft provides several open source agent modules. These are provided as is, and receive no support for MuleSoft. To access these modules, check the GitHub repositories:

* link:https://github.com/mulesoft/mule-agent-modules[Agent modules (general)]
* link:https://github.com/mulesoft/mule-agent-modules/tree/master/mule-agent-monitoring-publishers[JMX publisher modules]

[NOTE]
The Mule agent is only available for Mule Enterprise Edition (EE). Currently, the Mule agent supports Mule 3.6.0 or later.

== Assumptions

The pages listed below assume that you have the current version of Mule Enterprise already installed. Download it from the link:http://www.mulesoft.com/support-login[customer portal] if you need to upgrade to this version.

Additionally, it is assumed that your enterprise license is current. Please see link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Installing an Enterprise License] for information on obtaining and installing an enterprise license.

== Mule Agent Documentation Pages

* link:/mule-agent/v/1.1.1/installing-mule-agent[Installing Mule Agent]
* link:/mule-agent/v/1.1.1/mule-agent-architecture[Mule Agent Architecture]
* link:/mule-agent/v/1.1.1/administration-service[Administration Service]
* link:/mule-agent/v/1.1.1/managing-applications-and-domains[Managing Applications and Domains]
* link:/mule-agent/v/1.1.1/event-tracking[Event Tracking]
* link:/mule-agent/v/1.1.1/jmx-service[JMX Service]
* link:/mule-agent/v/1.1.1/mule-agent-notifications[Mule Agent Notifications]
* link:/mule-agent/v/1.1.1/extending-the-mule-agent[Extending the Mule Agent]
* link:/mule-agent/v/1.1.1/internal-handler-buffering[Internal Handler Buffering]
* link:/mule-agent/v/1.1.1/configuring-a-proxy-for-the-mule-agent[Configuring a Proxy for the Mule Agent]
